# ei_view

./: .gitignore  CMakeLists.txt  README.md  bld.bat
misc/: far.multiarc.ini
src/: ei_view.cpp  resutil.cpp
